<resources>
    <string name="app_name">Daleel</string>
    <string name="email">your email</string>
    <string name="password">your password</string>
    <string name="login">sign in</string>
    <string name="createaccount">sign up</string>
    <string name="skip">skip now</string>
    <string name="forget">forgot password</string>
    <string name="username">user name</string>
    <string name="mobile">mobile number :</string>
    <string name="confirmpassword">confirm password </string>
    <string name="phone">phone number </string>
    <string name="verify">verification code will be sent to your email </string>
    <string name="send"> send </string>
    <string name="havecode"> already have code </string>
    <string name="confirm"> confirm </string>
    <string name="enter"> enter code </string>
    <string name="code">  code </string>
    <string name="changepassword">please change your password</string>
    <string name="newpassword">new password</string>
    <string name="CompanyName">Company :</string>
    <string name="CountryName">Country :</string>
    <string name="Mohafza">Mohafza :</string>
    <string name="Section">Section :</string>
    <string name="city">city :</string>
    <string name="zone">zone :</string>
    <string name="tasnif">tasnif :</string>
    <string name="telephone">telephone No:</string>
    <string name="resname">Responsible :</string>
    <string name="address">address :</string>

    <string name="whats">whats No:</string>
    <string name="emailofcomapany">email address :</string>
    <string name="login_preferences">com.example.daleel login</string>
    <string name="login_status_preferences">com.example.daleel login_status</string>
    <string name="draweropen">drawer open</string>
    <string name="drawerclose">drawer close</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Daleel</string>
    <string name="nav_header_subtitle">companies</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search">search</string>
    <string name="languageselect">Do you want to change language</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="languagesetting">language change</string>

    <!-- TODO: Remove or change this placeholder text -->


    <!-- TODO: Remove or change this placeholder text -->


</resources>
