<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mediumpurple"
    android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginBottom="30dp"
                android:src="@drawable/picdaleel" />

            <TextView
                android:id="@+id/textsend"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@color/mediumpurple"
                android:gravity="center"
                android:text="@string/verify"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textemailsend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/buttonregstyle"
                android:drawableStart="@drawable/ic_email_purple"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/buttonhavecode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="20dp"
                android:background="@drawable/buttonforgetstyle"
                android:text="@string/havecode"
                android:textColor="@color/orange"
                android:textSize="12sp" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"/>

            <Button
                android:id="@+id/buttonsendemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonloginstyle"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="14sp" />


        </LinearLayout>
    </ScrollView>

