<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mediumpurple">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/picdaleel" />

        <TextView
            android:id="@+id/textsend"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@color/mediumpurple"
            android:gravity="center"
            android:text="@string/enter"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/textcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="@drawable/buttonregstyle"
            android:drawableStart="@drawable/ic_code_purple"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/code"
            android:inputType="textPersonName" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:progressDrawable="@drawable/progress"/>



        <Button
            android:id="@+id/buttonconfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonloginstyle"
            android:text="@string/confirm"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />


    </LinearLayout>
</ScrollView>

