<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mediumpurple"
    android:orientation="vertical"
    android:scrollbarThumbVertical="@drawable/scroll"


    tools:context=".Activities.LoginSystemActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="336dp"
            android:layout_height="175dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/picdaleel" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittextemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableStart="@drawable/ic_email_white"
                android:drawablePadding="10dp"
                android:ems="10"

                android:hint="@string/email"
                android:inputType="textEmailSubject"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textCursorDrawable="@drawable/white_cursor"
                android:background="@drawable/edittextloginstyle"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittextpasswordlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableStart="@drawable/ic_pass_white"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textCursorDrawable="@drawable/white_cursor"
                android:background="@drawable/edittextloginstyle"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/buttonforget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/buttonforgetstyle"
            android:text="@string/forget"
            android:textColor="@color/orange"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonlogin"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/buttonloginstyle"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttonregister"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/buttonregstyle"
            android:text="@string/createaccount"
            android:textColor="@color/darkpurple"
            android:textSize="14sp"

            />

    </LinearLayout>
</ScrollView>

