<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mediumpurple"
    android:orientation="vertical"
    android:scrollbarThumbVertical="@drawable/scroll">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="336dp"
            android:layout_height="175dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/picdaleel" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:textColorHint="@color/black"
            app:hintTextAppearance="@color/black">

            <EditText
                android:id="@+id/edittextusername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/edittextcreatestyle"
                android:drawableStart="@drawable/ic_person_purple"
                android:drawablePadding="10dp"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/username"
                android:inputType="textEmailSubject"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/white_cursor"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/black"
            app:hintTextAppearance="@color/black">

            <EditText
                android:id="@+id/edittextemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/edittextcreatestyle"
                android:drawableStart="@drawable/ic_email_purple"
                android:drawablePadding="10dp"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/white_cursor"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/black"
            app:hintTextAppearance="@color/black">

            <EditText
                android:id="@+id/edittextphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/edittextcreatestyle"
                android:drawableStart="@drawable/ic_phone_purple"
                android:drawablePadding="10dp"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/phone"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/white_cursor"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/black"
            app:hintTextAppearance="@color/black">

            <EditText
                android:id="@+id/edittextpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/edittextcreatestyle"
                android:drawableStart="@drawable/ic_pass_purple"
                android:drawablePadding="10dp"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/white_cursor"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/black"
            app:hintTextAppearance="@color/black">

            <EditText
                android:id="@+id/edittextconfirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edittextcreatestyle"
                android:drawableStart="@drawable/ic_pass_purple"
                android:drawablePadding="10dp"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/confirmpassword"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/white_cursor"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:progressDrawable="@drawable/progress"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttoncreate"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/buttonregstyle"

            android:text="@string/createaccount"
            android:textColor="@color/darkpurple"

            />


    </LinearLayout>

</ScrollView>